[svn r38144] Fixed a problem with the linker which on building api/source docs found matches in its own source code, moved some elements in the apigen docs out of a header where they shouldn't have been (making the font too large).
--HG--
branch : trunk

--- a/py/apigen/style.css
+++ b/py/apigen/style.css
@@ -34,10 +34,6 @@ ul li {
   list-style-type: none;
 }
 
-.classdoc {
-  font-size: 0.8em;
-}
-
 .code a {
   color: blue;
   font-weight: bold;
